# local-podcast-publisher

./: .envrc  .gitignore  Makefile  README.md  TGS Podcast.xml  apology-line-rss-example.xml  get-ip  gistfile1.py  nginx-image.txt  pyproject.toml  requirements.txt  run-file-server-extract.sh  run-file-server.sh
etc/nginx/conf.d/: default.conf
