[project]
name = "audio-only"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.13.5",
    "bs4==0.0.2",
    "docopt==0.6.2",
    "feedgen==1.0.0",
    "lxml==6.0.2",
    "pip-chill==1.0.3",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "soupsieve==2.8",
]
